--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @run) do |form| %>
   <div class="form-group">
     <%= form.label :date, 'What day did you run?', class: 'form-label' %>
-    <%= form.date_field :date, required: true, max: Date.today, class: 'form-input' %>
+    <%= form.date_field :date, required: true, autofocus: true, max: Date.today, value: form.object.new_record? ? Date.today : @run.date, class: 'form-input' %>
   </div>
 
   <div class="form-group">
@@ -15,13 +15,7 @@
         <span class="text-xs opacity-75 my-1">(hh:mm:ss OR mm:ss)</span>
       </p>
     <% end %>
-    <% if @run.duration && @run.hours != 0 %>
-      <%= form.text_field :duration_input, required: true, value: "#{@run.hours}:#{@run.minutes}:#{@run.seconds}", placeholder: 'hh:mm:ss', class: 'form-input' %>
-    <% elsif @run.duration %>
-      <%= form.text_field :duration_input, required: true, value: "#{@run.minutes}:#{@run.seconds}", placeholder: 'hh:mm:ss', class: 'form-input' %>
-    <% else %>
-      <%= form.text_field :duration_input, required: true, placeholder: 'hh:mm:ss', class: 'form-input' %>
-      <% end %>
+      <%= form.text_field :duration_input, required: true, placeholder: 'hh:mm:ss', value: form.object.new_record? ? '' : clock_time_display(@run.duration), class: 'form-input' %>
   </div>
 
   <div class="form-group">
@@ -34,17 +28,17 @@
   </div>
 
   <div class="flex items-center justify-between flex-wrap">
-  <div class="sm:flex-1 sm:mb-0 mb-6">
-    <%= form.submit class: "btn btn-primary" %>
-  </div>
-
-  <% if form.object.new_record? %>
-    <%= link_to "Cancel", runs_path, class: "btn btn-light" %>
-  <% else %>
-    <div class="flex gap-6 items-center">
-      <%= button_to "Delete", @run, method: :delete, class: "btn btn-destructive", form: { data: { turbo_confirm: "Are you sure?" } } %>
-      <%= link_to "Cancel", run_path(@run), class: "btn btn-light" %>
+    <div class="sm:flex-1 sm:mb-0 mb-6">
+      <%= form.submit class: "btn btn-primary" %>
     </div>
-  <% end %>
-</div>
+
+    <% if form.object.new_record? %>
+      <%= link_to "Cancel", runs_path, class: "btn btn-light" %>
+    <% else %>
+      <div class="flex gap-6 items-center">
+        <%= button_to "Delete", @run, method: :delete, class: "btn btn-destructive", data: { confirm: "Are you sure?" }  %>
+        <%= link_to "Cancel", @run, class: "btn btn-light" %>
+      </div>
+    <% end %>
+  </div>
 <% end %>
