--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,25 +1,37 @@
 <% nav_links = {
   'Home': root_url,
   'Runs': runs_path,
-  'Profile': user_path(current_user)
-} %>
+}.tap do |links|
+  links['Profile'] = user_path(current_user) if user_signed_in?
+end %>
 
-<div class="container max-w-3xl mx-auto px-4 flex flex-wrap items-center justify-between">
-  <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-slate-500 rounded-lg md:hidden hover:bg-slate-100 focus:outline-none focus:ring-2 focus:ring-slate-200 dark:text-slate-400 dark:hover:bg-slate-700 dark:focus:ring-slate-600" aria-controls="navbar-default" aria-expanded="false">
-    <span class="sr-only">Open main menu</span>
-    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"></path>
-    </svg>
-  </button>
-  <div class="hidden w-full md:block md:w-auto">
-    <nav class="font-medium flex flex-col gap-3 p-4 md:p-0 mt-4 rounded-lg md:flex-row bg-white dark:bg-slate-900">
-      <% nav_links.each do |name, path| %>
-        <% if current_page?(path) %>
-          <%= link_to name, path, class: 'nav-link nav-link-active' %>
-        <% else %>
-          <%= link_to name, path, class: 'nav-link' %>
-        <% end %>
-      <% end %>
-    </nav>
+<header
+  class="container max-w-3xl mx-auto px-3 py-3 sm:flex sm:justify-between sm:items-center"
+  data-controller="navbar" data-navbar-state-value="false">
+  <div class="flex justify-between px-4 py-1 sm:p-0 items-center">
+    <div class="font-bold text-xl">
+      <span class="text-indigo-600">Team</span>Runner
+    </div>
+  <% if user_signed_in? %>
+    <div class="sm:hidden">
+      <button class="text-indigo-600 focus:text-white focus:outline-none hover:text-white block"
+        type="button"
+        data-action="click->navbar#toggle" >
+        <span class="sr-only">Open main menu</span>
+        <svg class="h-8 w-8 fill-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+          <path data-navbar-target="x"    stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" class="hidden" />
+          <path data-navbar-target="bars" stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+        </svg>
+      </button>
+    </div>
+    <% end %>
   </div>
-</div>
+  <% if user_signed_in? %>
+  <div class="hidden sm:flex sm:gap-3 sm:items-center px-2 pt-2 pb-4 sm:pb-2 text-center" data-navbar-target="menu">
+    <% nav_links.each do |name, path| %>
+      <%= link_to name, path, class: "nav-link #{'nav-link-active' if current_page?(path)}" %>
+    <% end %>
+      <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: "btn btn-destructive btn-outline" %>
+  </div>
+  <% end %>
+</header>
