hide last column of run when viewport is small

--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -3,17 +3,17 @@
     <tr>
       <th>Time:</th>
       <td><span class="text-base"><%= clock_time_display(run.duration) %></span></td>
-      <td><span class="text-sm text-slate-600 dark:text-slate-400"><%= precise_distance_of_time_in_words(run.duration) %></span></td>
+      <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= precise_distance_of_time_in_words(run.duration) %></span></td>
     </tr>
     <tr>
       <th>Distance:</th>
       <td><span class="text-base"><%= run.distance %> <span class="text-sm text-slate-600 dark:text-slate-400">mi</span></span></td>
-      <td><span class="text-sm text-slate-600 dark:text-slate-400"><%= run.distance_km %> km</span></td>
+      <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= run.distance_km %> km</span></td>
     </tr>
     <tr>
       <th>Pace:</th>
       <td><span class="text-base"><%= clock_time_display(run.pace_per_mile) %> <span class="text-sm text-slate-600 dark:text-slate-400">/ mi</span></span></td>
-      <td><span class="text-sm text-slate-600 dark:text-slate-400"><%= clock_time_display(run.pace_per_km) %> / km</span></td>
+      <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= clock_time_display(run.pace_per_km) %> / km</span></td>
     </tr>
   </table>
 
