--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,42 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: 'username' %>
+<% content_for :masthead do %>
+  <div class="text-center">
+    <h1 class="heading my-3">Sign up for an account</h1>
+    <p class="mb-6 text-slate-700 dark:text-slate-200">
+      Already have an account? <%= link_to "Sign in", new_session_path(resource_name), class: "btn-link" %>
+    </p>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  <%#= render 'shared/error_messages', resource: resource %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render 'auth_layout' do %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+
+    <div class="form-group">
+      <%= f.label :username, class: 'form-label' %>
+      <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-input' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :email, class: 'form-label' %>
+      <%= f.email_field :email, autocomplete: "email", class: 'form-input', pattern: "[^@\s]+@[^@\s]+\.[^@\s]+", title: "Invalid email address" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password, class: 'form-label' %>
+      <%= f.password_field :password, autocomplete: "new-password", class: 'form-input' %>
+      <% if @minimum_password_length %>
+        <p class="text-xs text-slate-700 dark:text-slate-400"><%= @minimum_password_length %> characters minimum</p>
+      <% end %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password_confirmation, class: 'form-label' %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-input' %>
+    </div>
+
+    <%= f.submit "Sign up", class: 'btn btn-primary w-full' %>
+  <% end %>
+
+  <%#= render "devise/shared/links" %>
+<% end %>
