--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -6,9 +6,17 @@
   @apply text-indigo-600 hover:text-indigo-600 relative hover:transition hover:duration-300 hover:ease-in-out dark:hover:text-indigo-400 dark:text-indigo-500;
 }
 
+.nav-link-destructive {
+  @apply text-rose-600 focus:text-rose-600 hover:text-rose-500 dark:text-rose-600 dark:hover:text-rose-500 dark:focus:text-rose-500;
+}
+
 .nav-link:hover::after,
 .nav-link-active::after {
   @apply content-[''] block h-[2px] w-full left-0 absolute -bottom-px transition duration-300 ease-in-out bg-indigo-600 hover:transition hover:duration-300 dark:bg-indigo-500;
+}
+
+.nav-link-destructive:hover::after {
+  @apply content-[''] block h-[2px] w-full left-0 absolute -bottom-px transition duration-300 ease-in-out bg-rose-600 hover:transition hover:duration-300 dark:bg-rose-500;
 }
 
 /* Dark */
