--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,37 +1,41 @@
-<% nav_links = {
-  'Home': root_url,
-  'Runs': runs_path,
-}.tap do |links|
-  links['Profile'] = user_path(current_user) if user_signed_in?
+<% nav_links = [
+  { name: 'Runs', path: runs_path, options: {} },
+].tap do |links|
+  if user_signed_in?
+    links.push({ name: 'Profile', path: edit_user_registration_path(current_user), options: {} })
+  end
 end %>
 
 <header
-  class="container max-w-3xl mx-auto px-3 py-3 sm:flex sm:justify-between sm:items-center"
+  class="container max-w-3xl mx-auto px-3 py-3 sm:flex sm:items-center <%= user_signed_in? ? 'sm:justify-between' : 'sm:justify-center pt-6' %>"
   data-controller="navbar" data-navbar-state-value="false">
-  <div class="flex justify-between px-4 py-1 sm:p-0 items-center">
+  <div class="flex items-center justify-between px-4 py-1 sm:p-0">
     <div class="font-bold text-xl">
-      <span class="text-indigo-600">Team</span>Runner
+      <%= link_to root_path do %>
+        <span class="text-indigo-600">Team</span>Runner
+      <% end %>
     </div>
-  <% if user_signed_in? %>
-    <div class="sm:hidden">
-      <button class="text-indigo-600 focus:text-white focus:outline-none hover:text-white block"
+    <% if user_signed_in? %>
+      <div class="sm:hidden">
+        <button class="text-indigo-600 focus:text-white focus:outline-none hover:text-white block"
         type="button"
         data-action="click->navbar#toggle" >
-        <span class="sr-only">Open main menu</span>
-        <svg class="h-8 w-8 fill-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-          <path data-navbar-target="x"    stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" class="hidden" />
-          <path data-navbar-target="bars" stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-        </svg>
-      </button>
-    </div>
+          <span class="sr-only">Open main menu</span>
+          <svg class="h-8 w-8 fill-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+            <path data-navbar-target="x"    stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" class="hidden" />
+            <path data-navbar-target="bars" stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+          </svg>
+        </button>
+      </div>
     <% end %>
   </div>
   <% if user_signed_in? %>
-  <div class="hidden sm:flex sm:gap-3 sm:items-center px-2 pt-2 pb-4 sm:pb-2 text-center" data-navbar-target="menu">
-    <% nav_links.each do |name, path| %>
-      <%= link_to name, path, class: "nav-link #{'nav-link-active' if current_page?(path)}" %>
-    <% end %>
-      <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: "btn btn-destructive btn-outline" %>
-  </div>
+    <div class="hidden sm:flex sm:gap-3 sm:items-center px-2 pt-2 pb-4 sm:pb-2 text-center" data-navbar-target="menu">
+      <% nav_links.each do |item| %>
+        <% link_options = { class: "nav-link #{'nav-link-active' if current_page?(item[:path]) }" }.merge(item[:options] || {}) %>
+        <%= link_to item[:name], item[:path], link_options %>
+      <% end %>
+      <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link nav-link-destructive' %>
+    </div>
   <% end %>
 </header>
