--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -5,7 +5,7 @@
         <%= @run.user.username.blank? ? @run.user.email : @run.user.username %>
       </h1>
       <div class="flex space-x-3">
-        <%= link_to "Edit", edit_run_path(@run), class: "btn btn-light" %>
+        <%= link_to "Edit", edit_run_path(@run), class: "btn btn-white" %>
       </div>
     </div>
   </div>
