--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -6,7 +6,7 @@
 
   <div class="form-group">
     <%= form.label :distance, 'How many miles did you run?', class: 'form-label' %>
-    <%= form.number_field :distance, required: true, step: :any, placeholder: '1.234', class: 'form-input' %>
+    <%= form.number_field :distance, required: true, step: :any, min: 0, placeholder: '1.234', class: 'form-input' %>
   </div>
 
   <div class="form-group">
