--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -6,7 +6,7 @@
 
   <div class="form-group">
     <%= form.label :distance, 'How many miles did you run?', class: 'form-label' %>
-    <%= form.number_field :distance, required: true, step: :any, min: 0, placeholder: '1.234', class: 'form-input' %>
+    <%= form.number_field :distance, required: true, step: :any, min: 0, class: 'form-input' %>
   </div>
 
   <div class="form-group">
@@ -18,10 +18,10 @@
   <div class="form-group">
     <%= form.label :comments, class: 'form-label' do %>
       <p> Any additional comments?
-        <span class="text-xs opacity-75 my-1">(optional)</span>
+        <span class="text-xs text-slate-700 dark:text-slate-400">(optional)</span>
       </p>
     <% end %>
-    <%= form.text_area :comments, placeholder: 'Add comments...', data: { controller: 'autogrow', action: 'input->autogrow#grow' },class: 'form-input resize-vertical' %>
+    <%= form.text_area :comments, placeholder: 'Add comments...', data: { controller: 'autogrow', action: 'input->autogrow#grow' }, class: 'form-input resize-vertical' %>
   </div>
 
   <div class="flex items-center justify-between flex-wrap">
@@ -33,7 +33,7 @@
       <%= link_to "Cancel", runs_path, class: "btn btn-white" %>
     <% else %>
       <div class="flex gap-6 items-center">
-        <%= button_to "Delete", @run, method: :delete, class: "btn btn-destructive", data: { confirm: "Are you sure?" }  %>
+        <%= button_to "Delete", @run, method: :delete, class: "btn btn-destructive", data: { turbo_confirm: "Are you sure you want to delete this run?" }  %>
         <%= link_to "Cancel", @run, class: "btn btn-white" %>
       </div>
     <% end %>
