--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -33,7 +33,17 @@
       <%= link_to "Cancel", runs_path, class: "btn btn-white" %>
     <% else %>
       <div class="flex gap-6 items-center">
-        <%= button_to "Delete", @run, method: :delete, class: "btn btn-destructive", data: { turbo_confirm: "Are you sure you want to delete this run?" }  %>
+        <%= button_to "Delete", @run,
+                      method: :delete,
+                      class: "btn btn-destructive btn-outline",
+                      form: {
+                        data: {
+                          turbo: false,
+                          controller: 'confirmation',
+                          action: 'submit->confirmation#confirm',
+                          confirmation_message_value: "Are you sure you want to delete this run?"
+                        }
+                      } %>
         <%= link_to "Cancel", @run, class: "btn btn-white" %>
       </div>
     <% end %>
