--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <div id="runs" class="divide-y divide-slate-400 dark:text-slate-700 mb-10">
+  <div id="runs" class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
     <% @runs.each do |run| %>
       <div class="py-3">
         <%= render run %>
