--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -11,7 +11,7 @@
       <div class="py-3">
         <%= render run %>
 
-        <%= link_to "View run", run, class: "btn-link inline-block my-3" %>
+        <%= link_to "View Run", run, class: "btn-link inline-block my-3" %>
       </div>
     <% end %>
   </div>
