--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,7 +26,7 @@
       <%= f.label :password, class: 'form-label' %>
       <%= f.password_field :password, autocomplete: "new-password", class: 'form-input' %>
       <% if @minimum_password_length %>
-        <p class="text-xs text-slate-700 dark:text-slate-400"><%= @minimum_password_length %> characters minimum</p>
+        <p class="text-xs text-slate-700 my-1 dark:text-slate-400"><%= @minimum_password_length %> characters minimum</p>
       <% end %>
     </div>
 
