--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,13 +13,13 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="form-group">
-      <%= f.label :username, class: 'form-label' %>
-      <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-input' %>
+      <%= f.label :email, class: 'form-label' %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-input', pattern: "[^@\s]+@[^@\s]+\.[^@\s]+", title: "Invalid email address" %>
     </div>
 
     <div class="form-group">
-      <%= f.label :email, class: 'form-label' %>
-      <%= f.email_field :email, autocomplete: "email", class: 'form-input', pattern: "[^@\s]+@[^@\s]+\.[^@\s]+", title: "Invalid email address" %>
+      <%= f.label :username, class: 'form-label' %>
+      <%= f.text_field :username, class: 'form-input' %>
     </div>
 
     <div class="form-group">
