--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="max-w-3xl mx-auto px-4 my-16">
-  <div class="flex items-center justify-between pb-6 border-b dark:border-slate-700">
+  <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
     <h1 class="heading">Runs</h1>
     <div class="flex items-center justify-end">
       <%= link_to "New Run", new_run_path, class: "btn btn-primary" %>
