--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -29,23 +29,16 @@
       <%= form.submit class: "btn btn-primary" %>
     </div>
 
-    <% if form.object.new_record? %>
-      <%= link_to "Cancel", runs_path, class: "btn btn-white" %>
-    <% else %>
-      <div class="flex gap-6 items-center">
-        <%= button_to "Delete", @run,
-                      method: :delete,
+    <div class="flex gap-6 items-center">
+      <% unless form.object.new_record? %>
+        <%= link_to "Delete", @run,
                       class: "btn btn-destructive btn-outline",
-                      form: {
-                        data: {
-                          turbo: false,
-                          controller: 'confirmation',
-                          action: 'submit->confirmation#confirm',
-                          confirmation_message_value: "Are you sure you want to delete this run?"
-                        }
+                      data: {
+                        turbo_method: :delete,
+                        turbo_confirm: 'Are you sure you want to delete this run?'
                       } %>
-        <%= link_to "Cancel", @run, class: "btn btn-white" %>
-      </div>
-    <% end %>
+      <% end %>
+      <%= link_to "Cancel", :back, class: "btn btn-white" %>
+    </div>
   </div>
 <% end %>
