--- a/app/views/devise/_auth_layout.html.erb
+++ b/app/views/devise/_auth_layout.html.erb
@@ -1,4 +1,4 @@
-<div class="sm:h-[calc(100vh_-_52px)] pt-10 sm:pt-0 flex flex-col items-center justify-center bg-cover bg-center px-4" >
+<div class="flex flex-col items-center justify-center mb-28 px-2 sm:px-4" >
   <div class="sm:flex-1 flex flex-col justify-center sm:w-[428px] w-full">
     <div>
       <div class="mt-6">
