--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :password_confirmation, class: 'form-label' %>
+      <%= f.label :password_confirmation, 'Password Confirmation', class: 'form-label' %>
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-input' %>
     </div>
 
