--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,12 +12,12 @@
     <p class="text-sm text-slate-600 dark:text-slate-400">This information will be displayed publicly.</p>
   </div>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%#= render "shared/error_messages", resource: resource %>
+  <%= form_for resource, as: resource_name, url: registration_path(resource_name), data: { controller: "form-validation" }, html: { method: :put, novalidate: true } do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class='form-group'>
       <%= f.label :username, class: "form-label" %>
-      <%= f.text_field :username, class: "form-input" %>
+      <%= f.text_field :username, class: "form-input", data: { form_validation_target: "username", action: "blur->form-validation#validateUsername" } %>
     </div>
 
     <div class="py-10 mt-6 border-t border-slate-200 dark:border-slate-700">
@@ -27,12 +27,12 @@
 
     <div class='form-group'>
       <%= f.label :email, class: "form-label" %>
-      <%= f.email_field :email, autocomplete: "email", class: "form-input" %>
+      <%= f.email_field :email, autocomplete: "email", class: "form-input", data: { form_validation_target: "email", action: "blur->form-validation#validateEmail" } %>
     </div>
 
     <div class='form-group'>
       <%= f.label :password, 'New password', class: "form-label" %>
-      <%= f.password_field :password, autocomplete: "new-password", class: "form-input" %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-input", data: { form_validation_target: "password", action: "blur->form-validation#validatePassword" } %>
       <p class="text-xs text-slate-700 my-1 dark:text-slate-400">Leave this blank if you don't want to change it.</p>
       <% if @minimum_password_length %>
         <p class="text-xs text-slate-700 dark:text-slate-400"><%= @minimum_password_length %> characters minimum</p>
@@ -41,7 +41,7 @@
 
     <div class='form-group hidden opacity-0 max-h-0 overflow-hidden transition-all duration-500 ease-in-out' id='password_confirmation_container' aria-live="polite" >
       <%= f.label :password_confirmation, 'Confirm new password', class: "form-label" %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input", data: { form_validation_target: "passwordConfirmation", action: "blur->form-validation#validatePasswordConfirmation" } %>
     </div>
 
     <div class='form-group'>
