--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -1,17 +1,17 @@
-<%= form_with(model: @run) do |form| %>
+<%= form_with model: @run, data: { controller: "form-validation" }, html: { novalidate: true } do |form| %>
   <div class="form-group">
     <%= form.label :date, 'What day did you run?', class: 'form-label' %>
-    <%= form.date_field :date, required: true, autofocus: true, max: Date.today, value: form.object.new_record? ? Date.today : @run.date, class: 'form-input' %>
+    <%= form.date_field :date, required: true, autofocus: true, max: Date.today, value: form.object.new_record? ? Date.today : @run.date, class: 'form-input', data: { form_validation_target: "date", action: "blur->form-validation#validateDate" } %>
   </div>
 
   <div class="form-group">
     <%= form.label :distance, 'How many miles did you run?', class: 'form-label' %>
-    <%= form.number_field :distance, required: true, step: :any, min: 0, class: 'form-input' %>
+    <%= form.number_field :distance, required: true, step: :any, min: 0, class: 'form-input', data: { form_validation_target: "distance", action: "blur->form-validation#validateDistance" } %>
   </div>
 
   <div class="form-group">
     <%= form.label :duration_input, 'How long did you run?', class: 'form-label' %>
-    <%= form.text_field :duration_input, required: true, pattern: '^((2[0-3]|1\d|0?\d):)?([0-5]?\d):([0-5]\d)$', title: 'Enter time in MM:SS or HH:MM:SS format', value: form.object.new_record? ? '' : clock_time_display(@run.duration), class: 'form-input' %>
+    <%= form.text_field :duration_input, required: true, value: form.object.new_record? ? '' : clock_time_display(@run.duration), class: 'form-input', data: { form_validation_target: "duration", action: "blur->form-validation#validateDuration" } %>
     <p class="text-xs text-slate-700 my-1 dark:text-slate-400">Enter time in MM:SS or HH:MM:SS format.</p>
   </div>
 
@@ -21,7 +21,7 @@
         <span class="text-xs text-slate-700 dark:text-slate-400">(optional)</span>
       </p>
     <% end %>
-    <%= form.text_area :comments, placeholder: 'Add comments...', data: { controller: 'autogrow', action: 'input->autogrow#grow' }, class: 'form-input resize-vertical' %>
+    <%= form.text_area :comments, placeholder: 'Add comments...', class: 'form-input resize-vertical', data: { controller: 'autogrow', action: 'input->autogrow#grow' } %>
   </div>
 
   <div class="flex items-center justify-between flex-wrap">
