--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,7 +32,7 @@
 
     <div class='form-group'>
       <%= f.label :password, 'New password', class: "form-label" %>
-      <%= f.password_field :password, autocomplete: "new-password", class: "form-input", data: { form_validation_target: "password", action: "blur->form-validation#validatePassword" } %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-input", data: { form_validation_target: "newPassword", action: "blur->form-validation#validateNewPassword blur->form-validation#validateNewPasswordConfirmation" } %>
       <p class="text-xs text-slate-700 my-1 dark:text-slate-400">Leave this blank if you don't want to change it.</p>
       <% if @minimum_password_length %>
         <p class="text-xs text-slate-700 dark:text-slate-400"><%= @minimum_password_length %> characters minimum</p>
