--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -58,7 +58,7 @@
   <% end %>
 
   <div class="flex justify-end">
-    <%= button_to "Cancel Account", registration_path(resource_name),
+    <%= button_to "Cancel account", registration_path(resource_name),
                   method: :delete,
                   class: "text-slate-400 hover:text-slate-600 font-semibold text-sm relative -top-8",
                   form: {
