--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,6 @@
       Already have an account? <%= link_to "Sign in", new_session_path(resource_name), class: "btn-link" %>
     </p>
   </div>
-  <%#= render 'shared/error_messages', resource: resource %>
 <% end %>
 
 <%= render 'auth_layout' do %>
@@ -31,12 +30,10 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :password_confirmation, 'Password Confirmation', class: 'form-label' %>
+      <%= f.label :password_confirmation, class: 'form-label' %>
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-input', data: { form_validation_target: "passwordConfirmation", action: "blur->form-validation#validatePasswordConfirmation" } %>
     </div>
 
     <%= f.submit "Sign up", class: 'btn btn-primary w-full' %>
   <% end %>
-
-  <%= render "devise/shared/links" %>
 <% end %>
