--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,35 +1,35 @@
 <% if notice %>
-  <div class="bg-indigo-600 text-white text-center text-sm sm:text-base p-4 absolute top-6 z-10 rounded-lg left-1/2 -translate-x-1/2" role="alert">
+  <div class="bg-indigo-600 text-white text-center text-sm sm:text-base p-4 fixed top-10 right-10 z-50 max-w-[70vw] sm:max-w-max rounded-lg translate-x-[120%] transition duration-300 ease-in-out" role="alert">
     <p class='flex items-center space-x-4'>
       <span><%= sanitize notice %></span>
-      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.style.display='none'">&times;</span>
+      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')">&times;</span>
     </p>
   </div>
 <% end %>
 
 <% if flash[:error] %>
-  <div class="bg-rose-600 text-white text-center text-sm sm:text-base p-4 absolute top-6 z-10 rounded-lg left-1/2 -translate-x-1/2" role="alert">
+  <div class="bg-rose-600 text-white text-center text-sm sm:text-base p-4 fixed top-10 right-10 z-50 max-w-[70vw] sm:max-w-max rounded-lg translate-x-[120%] transition duration-300 ease-in-out" role="alert">
     <p class='flex items-center space-x-4'>
       <span><%= sanitize flash[:error] %></span>
-      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.style.display='none'">&times;</span>
+      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')">&times;</span>
     </p>
   </div>
 <% end %>
 
 <% if alert %>
-  <div class="bg-rose-600 text-white text-center text-sm sm:text-base p-4 absolute top-6 z-10 rounded-lg left-1/2 -translate-x-1/2" role="alert">
+  <div class="bg-rose-600 text-white text-center text-sm sm:text-base p-4 fixed top-10 right-10 z-50 max-w-[70vw] sm:max-w-max rounded-lg translate-x-[120%] transition duration-300 ease-in-out" role="alert">
     <p class='flex items-center space-x-4'>
       <span><%= sanitize alert %></span>
-      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.style.display='none'">&times;</span>
+      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')">&times;</span>
     </p>
   </div>
 <% end %>
 
 <% if success %>
-  <div class="bg-green-600 text-white text-center text-sm sm:text-base p-4 absolute top-6 z-10 rounded-lg left-1/2 -translate-x-1/2" role="alert">
+  <div class="bg-green-600 text-white text-center text-sm sm:text-base p-4 fixed top-10 right-10 z-50 max-w-[70vw] sm:max-w-max rounded-lg translate-x-[120%] transition duration-300 ease-in-out" role="alert">
     <p class='flex items-center space-x-4'>
       <span><%= sanitize success %></span>
-      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.style.display='none'">&times;</span>
+      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')">&times;</span>
     </p>
   </div>
 <% end %>
@@ -37,7 +37,15 @@
 <script defer>
   document.querySelectorAll('[role="alert"]').forEach(message => {
     setTimeout(() => {
-      message.remove();
+      message.classList.remove('translate-x-[120%]');
+    }, 500);
+
+    setTimeout(() => {
+      message.classList.add('translate-x-[120%]');
     }, 5000);
+
+    setTimeout(() => {
+      message.remove();
+    }, 8000);
   });
 </script>
