--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -2,7 +2,7 @@
   <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
     <h1 class="heading">Runs</h1>
     <div class="flex items-center justify-end">
-      <%= link_to "New Run", new_run_path, class: "btn btn-primary" %>
+      <%= link_to "New run", new_run_path, class: "btn btn-primary" %>
     </div>
   </div>
 
@@ -11,7 +11,7 @@
       <div class="py-3">
         <%= render run %>
 
-        <%= link_to "View Run", run, class: "btn-link inline-block my-3" %>
+        <%= link_to "View run", run, class: "btn-link inline-block my-3" %>
       </div>
     <% end %>
   </div>
