--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
   <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
     <h1 class="heading">Runs This Week</h1>
     <div class="flex items-center justify-end">
-      <%= link_to "New Run", new_run_path, class: "btn btn-primary" %>
+      <%= link_to "New run", new_run_path, class: "btn btn-primary" %>
     </div>
   </div>
 
@@ -39,7 +39,7 @@
       <div class="py-3">
         <%= render run %>
 
-        <%= link_to "View Run", run, class: "btn-link inline-block my-3" %>
+        <%= link_to "View run", run, class: "btn-link inline-block my-3" %>
       </div>
     <% end %>
   </div>
