--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -12,6 +12,6 @@
   }
 
   .subheading {
-    @apply text-2xl font-bold tracking-tight;
+    @apply text-2xl font-bold text-slate-900 dark:text-slate-100 tracking-tight;
   }
 }
