--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,7 +9,7 @@ end %>
 <header
   class="w-full px-4 fixed top-0 z-10 backdrop-blur-md bg-white/75 dark:bg-slate-900/75 border-b dark:border-slate-700"
   data-controller="navbar" data-navbar-state-value="false">
-  <div class="max-w-3xl mx-auto sm:flex sm:items-center <%= user_signed_in? ? 'sm:justify-between' : 'sm:justify-center pt-6' %>">
+  <div class="max-w-3xl mx-auto sm:flex sm:items-center <%= user_signed_in? ? 'sm:justify-between' : 'sm:justify-center pt-6 pb-3' %>">
     <div class="flex items-center justify-between px-4 py-1 sm:p-0">
       <div class="font-bold text-xl">
         <%= link_to root_path do %>
